# pmai-mvp

./: .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  on-pr.yaml  push-to-main.yml
