[tool.poetry]
name = "pmai-mvp"
version = "0.1.0"
description = ""
authors = ["Roman Mikhailov <rommik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gradio = "^4.13.0"
openai = "^1.6.1"
langchain = "^0.0.354"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
